# verilog_cpu_and_compiler

./: .gitignore  .travis.yml  README.md
doc/: prco304.bib  sc_documentation_1-00.tex  sc_documentation_1-10.tex  sc_documentation_1-20.tex  sc_latest.tex  tmp.html
doc/final/: Ben_Lancaster_10424877.tex  compiler_ci.txt  emu_output.tex  highlights.tex  isa.tex  pid.tex  prco304.bib  prco304_h4.bib  user_review.txt  wordcount.html
doc/final/img/: compiler_ast_item.xml  compiler_cf.xml  compiler_dependencies.xml  fig_compiler_uml_seq.xml  hld.xml  prco_memory_layout.xml  td_instr2.txt
doc/gantt/: gantt.xlsx  prco_time_plan.xlsx
doc/highlights/: prco304.bib  prco304_h2.bib  prco304_h4.bib  prco304_highlight_1.tex  prco304_highlight_2.tex  prco304_highlight_3.tex  prco304_highlight_4.tex  prco304_highlight_5.tex  prco304_highlight_7.tex
doc/img/: prco_forward_pipe.xml  td_instr.txt
doc/pid/: intro.txt  prco304.bib
highlights/: prco304.bib  prco304_h2.bib  prco304_h4.bib  prco304_highlight_1.tex  prco304_highlight_4.tex  prco304_highlight_6.tex  prco304_highlight_7.tex  prco_highlight_latest_2.tex
pid/: PID - Ben Lancaster 10424877.tex  intro.txt  prco304.bib
prco_compiler/: CMakeLists.txt
prco_compiler/cli/: CMakeLists.txt  getopt.h  main.c
prco_compiler/emu/: CMakeLists.txt  emu.c  getopt.h  main.c
prco_compiler/include/libprco/: dbug.h  gen.h  module.h  opt.h  parser.h  types.h
prco_compiler/libprco/: CMakeLists.txt  dbug.c  gen.c  module.c  opt.c  parser.c  tok_prec.inc.c
prco_compiler/libprco/adt/: ast.c  list.c
prco_compiler/libprco/arch/: prco_impl.c  prco_isa.c  target.c  template_impl.c
prco_compiler/test/: run_tests.bat  travis-ci.sh  verilog_memh.txt
prco_compiler/test/tests/: binary_ops_1.prco  binary_ops_2.prco  binary_ops_3.prco  bool_le.prco  bool_le_2.prco  bool_le_3.prco  control_for_1.prco  control_for_2.prco  control_for_3.prco  control_if_1.prco  control_if_2.prco  control_if_3.prco  control_while_1.prco  control_while_2.prco  control_while_3.prco  control_while_4.prco  demo_step.prco  div_1.prco  div_2.prco  div_3.prco  div_4.prco  foo.prco  funcs_1.prco  funcs_2.prco  mul_1.prco  mul_2.prco  mul_3.prco  mul_4.prco  opt_cf_1.prco  opt_cf_2.prco  ports_uart_1.prco  scratch.prco  strings_1.prco  strings_2.prco  strings_3.prco  vars_1.prco  vars_2.prco
prco_core/demo/: notes.txt  spi_programming.txt  xc6lx9_msp_demo_control_for_3.bit  xc6lx9_msp_demo_control_while_3.bit  xc6lx9_msp_demo_funcs_2_delay20.bit  xc6lx9_msp_demo_funcs_2_delay40.bit  xc6lx9_msp_demo_step.bit
prco_core/impl/: miniSpartan6-plus.ucf  xc6lx9_minispartanp.ucf  xc6lx9_minispartanp.v
prco_core/ise/: ise.xise
prco_core/rtl/: prco_alu.v  prco_core.v  prco_decoder.v  prco_io.v  prco_lmem.v  prco_regs.v
prco_core/rtl/uart/: uart.v  (+1 more)
prco_cpu/: prco_cpu.xise
(+33 files in other folders)
